[package]
name = "ground_station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                = "1.0"
derive_builder        = "0.12"
eframe                = "0.21"
egui                  = { version = "0.21", features = ["tracing"] }
egui_extras           = { version = "0.21", features = ["image", "tracing"] }
enum-iterator         = "1.2"
image                 = { version = "0.24", features = ["png"] }
parse-display         = "0.8"
rand                  = "0.8"
tracing               = "0.1"
tracing-appender      = "0.2"
tracing-subscriber    = "0.3"
chrono                = "0.4"
serialport            = "4.2"
hex-literal           = "0.3"
byteorder             = "1.4"
rfd                   = "0.11"
parking_lot           = "0.12"
enum-primitive-derive = "0.2"
num-traits = "0.2.15"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. egui), but not for our code:
[profile.dev.package."*"]
opt-level = 3
